changed logs to linked list